Reformatted all fenix and scripts code, and applied code conventions