@@ -52,170 +52,170 @@ import org.apache.struts.action.DynaActionForm;
  */
 public class CandidateRegistrationDispatchAction extends FenixDispatchAction {
 
-    public ActionForward getCandidateList(ActionMapping mapping, ActionForm form, HttpServletRequest request,
-	    HttpServletResponse response) throws Exception {
+	public ActionForward getCandidateList(ActionMapping mapping, ActionForm form, HttpServletRequest request,
+			HttpServletResponse response) throws Exception {
 
-	DynaActionForm candidateRegistration = (DynaActionForm) form;
+		DynaActionForm candidateRegistration = (DynaActionForm) form;
 
-	String executionYearString = request.getParameter("executionYear");
-	String degreeCode = request.getParameter("degree");
+		String executionYearString = request.getParameter("executionYear");
+		String degreeCode = request.getParameter("degree");
 
-	Integer executionDegree = Integer.valueOf(request.getParameter("executionDegreeID"));
-	if ((executionYearString == null) || (executionYearString.length() == 0)) {
-	    executionYearString = (String) candidateRegistration.get("executionYear");
-	}
-
-	if ((degreeCode == null) || (degreeCode.length() == 0)) {
-	    degreeCode = (String) candidateRegistration.get("degreeCode");
-	}
-
-	IUserView userView = getUserView(request);
-
-	List result = null;
-
-	try {
-
-	    result = ReadCandidateForRegistration.run(executionDegree);
-	} catch (NonExistingServiceException e) {
-	    ActionErrors errors = new ActionErrors();
-	    errors.add("nonExisting", new ActionError("error.candidatesNotFound"));
-	    saveErrors(request, errors);
-	    return mapping.getInputForward();
-	} catch (FenixServiceException e) {
-	    throw new FenixActionException(e);
-	}
-
-	BeanComparator nameComparator = new BeanComparator("infoPerson.nome");
-	Collections.sort(result, nameComparator);
-
-	request.setAttribute("candidateList", result);
-	candidateRegistration.set("degreeCode", degreeCode);
-	candidateRegistration.set("executionYear", executionYearString);
-	candidateRegistration.set("candidateID", null);
-
-	InfoExecutionDegree infoExecutionDegree = ReadExecutionDegreeByOID.run(executionDegree);
-
-	request.setAttribute("infoExecutionDegree", infoExecutionDegree);
-	return mapping.findForward("ListCandidates");
-    }
-
-    public ActionForward prepareCandidateRegistration(ActionMapping mapping, ActionForm form, HttpServletRequest request,
-	    HttpServletResponse response) throws Exception {
-
-	DynaActionForm candidateRegistration = (DynaActionForm) form;
-
-	IUserView userView = getUserView(request);
-	Integer candidateID = new Integer(request.getParameter("candidateID"));
-
-	candidateRegistration.set("candidateID", candidateID);
-	candidateRegistration.set("studentNumber", null);
-	List branchList = null;
-	try {
-
-	    branchList = GetBranchListByCandidateID.run(candidateID);
-	} catch (FenixServiceException e) {
-	    throw new FenixActionException(e);
-	}
-
-	request.setAttribute("branchList", branchList);
-
-	InfoMasterDegreeCandidate infoMasterDegreeCandidate = null;
-	try {
-	    infoMasterDegreeCandidate = GetCandidatesByID.run(candidateID);
-	} catch (NonExistingServiceException e) {
-	    throw new FenixActionException(e);
-	}
-	candidateRegistration.set("branchID", null);
-	request.setAttribute("infoMasterDegreeCandidate", infoMasterDegreeCandidate);
-
-	return mapping.findForward("ShowConfirmation");
-    }
-
-    public ActionForward confirm(ActionMapping mapping, ActionForm form, HttpServletRequest request, HttpServletResponse response)
-	    throws Exception {
-
-	DynaActionForm candidateRegistration = (DynaActionForm) form;
-
-	IUserView userView = getUserView(request);
-	Integer candidateID = (Integer) candidateRegistration.get("candidateID");
-	Integer branchID = (Integer) candidateRegistration.get("branchID");
-
-	String studentNumberString = (String) candidateRegistration.get("studentNumber");
-	Integer studentNumber = null;
-	if ((studentNumberString != null) && (studentNumberString.length() > 0)) {
-	    try {
-		studentNumber = new Integer(studentNumberString);
-		if (studentNumber.intValue() < 0) {
-		    throw new NumberFormatException();
+		Integer executionDegree = Integer.valueOf(request.getParameter("executionDegreeID"));
+		if ((executionYearString == null) || (executionYearString.length() == 0)) {
+			executionYearString = (String) candidateRegistration.get("executionYear");
 		}
-	    } catch (NumberFormatException e) {
-		throw new InvalidInformationInFormActionException("error.exception.invalidInformationInStudentNumber");
-	    }
+
+		if ((degreeCode == null) || (degreeCode.length() == 0)) {
+			degreeCode = (String) candidateRegistration.get("degreeCode");
+		}
+
+		IUserView userView = getUserView(request);
+
+		List result = null;
+
+		try {
+
+			result = ReadCandidateForRegistration.run(executionDegree);
+		} catch (NonExistingServiceException e) {
+			ActionErrors errors = new ActionErrors();
+			errors.add("nonExisting", new ActionError("error.candidatesNotFound"));
+			saveErrors(request, errors);
+			return mapping.getInputForward();
+		} catch (FenixServiceException e) {
+			throw new FenixActionException(e);
+		}
+
+		BeanComparator nameComparator = new BeanComparator("infoPerson.nome");
+		Collections.sort(result, nameComparator);
+
+		request.setAttribute("candidateList", result);
+		candidateRegistration.set("degreeCode", degreeCode);
+		candidateRegistration.set("executionYear", executionYearString);
+		candidateRegistration.set("candidateID", null);
+
+		InfoExecutionDegree infoExecutionDegree = ReadExecutionDegreeByOID.run(executionDegree);
+
+		request.setAttribute("infoExecutionDegree", infoExecutionDegree);
+		return mapping.findForward("ListCandidates");
 	}
 
-	if ((request.getParameter("confirmation") == null) || request.getParameter("confirmation").equals("Confirmar")) {
+	public ActionForward prepareCandidateRegistration(ActionMapping mapping, ActionForm form, HttpServletRequest request,
+			HttpServletResponse response) throws Exception {
 
-	    InfoCandidateRegistration infoCandidateRegistration = null;
-	    try {
+		DynaActionForm candidateRegistration = (DynaActionForm) form;
 
-		infoCandidateRegistration = RegisterCandidate.run(candidateID, branchID, studentNumber, userView);
-	    } catch (InvalidStudentNumberServiceException e) {
-		throw new InvalidStudentNumberActionException(e);
-	    } catch (ActiveStudentCurricularPlanAlreadyExistsServiceException e) {
-		throw new ActiveStudentCurricularPlanAlreadyExistsActionException(e);
-	    } catch (GratuityValuesNotDefinedServiceException e) {
-		throw new GratuityValuesNotDefinedActionException(e);
-	    } catch (ExistingServiceException e) {
+		IUserView userView = getUserView(request);
+		Integer candidateID = new Integer(request.getParameter("candidateID"));
 
+		candidateRegistration.set("candidateID", candidateID);
+		candidateRegistration.set("studentNumber", null);
 		List branchList = null;
 		try {
 
-		    branchList = GetBranchListByCandidateID.run(candidateID);
-		} catch (FenixServiceException ex) {
-		    throw new FenixActionException(ex);
+			branchList = GetBranchListByCandidateID.run(candidateID);
+		} catch (FenixServiceException e) {
+			throw new FenixActionException(e);
 		}
 
 		request.setAttribute("branchList", branchList);
 
+		InfoMasterDegreeCandidate infoMasterDegreeCandidate = null;
 		try {
-
-		    GetCandidatesByID.run(candidateID);
-		} catch (NonExistingServiceException ex) {
-		    throw new FenixActionException(ex);
+			infoMasterDegreeCandidate = GetCandidatesByID.run(candidateID);
+		} catch (NonExistingServiceException e) {
+			throw new FenixActionException(e);
 		}
-		throw new ExistingActionException("O Aluno", e);
-	    } catch (InvalidChangeServiceException e) {
-		throw new InvalidChangeActionException("error.cantRegisterCandidate", e);
-	    } catch (FenixServiceException e) {
-		throw new FenixActionException(e);
-	    }
+		candidateRegistration.set("branchID", null);
+		request.setAttribute("infoMasterDegreeCandidate", infoMasterDegreeCandidate);
 
-	    candidateRegistration.set("studentCurricularPlanID", infoCandidateRegistration.getInfoStudentCurricularPlan()
-		    .getIdInternal());
-	    request.setAttribute("infoCandidateRegistration", infoCandidateRegistration);
-
-	    return mapping.findForward("ShowResult");
+		return mapping.findForward("ShowConfirmation");
 	}
-	return mapping.findForward("PrepareCandidateList");
 
-    }
+	public ActionForward confirm(ActionMapping mapping, ActionForm form, HttpServletRequest request, HttpServletResponse response)
+			throws Exception {
 
-    public ActionForward preparePrint(ActionMapping mapping, ActionForm form, HttpServletRequest request,
-	    HttpServletResponse response) throws Exception {
+		DynaActionForm candidateRegistration = (DynaActionForm) form;
 
-	DynaActionForm candidateRegistration = (DynaActionForm) form;
+		IUserView userView = getUserView(request);
+		Integer candidateID = (Integer) candidateRegistration.get("candidateID");
+		Integer branchID = (Integer) candidateRegistration.get("branchID");
 
-	IUserView userView = getUserView(request);
-	Integer candidateID = (Integer) candidateRegistration.get("candidateID");
+		String studentNumberString = (String) candidateRegistration.get("studentNumber");
+		Integer studentNumber = null;
+		if ((studentNumberString != null) && (studentNumberString.length() > 0)) {
+			try {
+				studentNumber = new Integer(studentNumberString);
+				if (studentNumber.intValue() < 0) {
+					throw new NumberFormatException();
+				}
+			} catch (NumberFormatException e) {
+				throw new InvalidInformationInFormActionException("error.exception.invalidInformationInStudentNumber");
+			}
+		}
 
-	InfoCandidateRegistration infoCandidateRegistration = null;
-	infoCandidateRegistration = GetCandidateRegistrationInformation.run(candidateID);
+		if ((request.getParameter("confirmation") == null) || request.getParameter("confirmation").equals("Confirmar")) {
 
-	request.setAttribute("infoCandidateRegistration", infoCandidateRegistration);
-	request.setAttribute("infoExecutionDegree", infoCandidateRegistration.getInfoMasterDegreeCandidate()
-		.getInfoExecutionDegree());
+			InfoCandidateRegistration infoCandidateRegistration = null;
+			try {
 
-	return mapping.findForward("Print");
-    }
+				infoCandidateRegistration = RegisterCandidate.run(candidateID, branchID, studentNumber, userView);
+			} catch (InvalidStudentNumberServiceException e) {
+				throw new InvalidStudentNumberActionException(e);
+			} catch (ActiveStudentCurricularPlanAlreadyExistsServiceException e) {
+				throw new ActiveStudentCurricularPlanAlreadyExistsActionException(e);
+			} catch (GratuityValuesNotDefinedServiceException e) {
+				throw new GratuityValuesNotDefinedActionException(e);
+			} catch (ExistingServiceException e) {
+
+				List branchList = null;
+				try {
+
+					branchList = GetBranchListByCandidateID.run(candidateID);
+				} catch (FenixServiceException ex) {
+					throw new FenixActionException(ex);
+				}
+
+				request.setAttribute("branchList", branchList);
+
+				try {
+
+					GetCandidatesByID.run(candidateID);
+				} catch (NonExistingServiceException ex) {
+					throw new FenixActionException(ex);
+				}
+				throw new ExistingActionException("O Aluno", e);
+			} catch (InvalidChangeServiceException e) {
+				throw new InvalidChangeActionException("error.cantRegisterCandidate", e);
+			} catch (FenixServiceException e) {
+				throw new FenixActionException(e);
+			}
+
+			candidateRegistration.set("studentCurricularPlanID", infoCandidateRegistration.getInfoStudentCurricularPlan()
+					.getIdInternal());
+			request.setAttribute("infoCandidateRegistration", infoCandidateRegistration);
+
+			return mapping.findForward("ShowResult");
+		}
+		return mapping.findForward("PrepareCandidateList");
+
+	}
+
+	public ActionForward preparePrint(ActionMapping mapping, ActionForm form, HttpServletRequest request,
+			HttpServletResponse response) throws Exception {
+
+		DynaActionForm candidateRegistration = (DynaActionForm) form;
+
+		IUserView userView = getUserView(request);
+		Integer candidateID = (Integer) candidateRegistration.get("candidateID");
+
+		InfoCandidateRegistration infoCandidateRegistration = null;
+		infoCandidateRegistration = GetCandidateRegistrationInformation.run(candidateID);
+
+		request.setAttribute("infoCandidateRegistration", infoCandidateRegistration);
+		request.setAttribute("infoExecutionDegree", infoCandidateRegistration.getInfoMasterDegreeCandidate()
+				.getInfoExecutionDegree());
+
+		return mapping.findForward("Print");
+	}
 
 }
