@@ -32,145 +32,154 @@ import pt.ist.fenixWebFramework.struts.annotations.Forwards;
 import pt.ist.fenixWebFramework.struts.annotations.Mapping;
 import pt.ist.fenixWebFramework.struts.annotations.Tile;
 
-@Mapping(module = "parkingManager", path = "/manageParkingPeriods", input = "/exportParkingDB.do?method=prepareExportFile", attribute = "parkingRenewalForm", formBean = "parkingRenewalForm", scope = "request", parameter = "method")
+@Mapping(
+		module = "parkingManager",
+		path = "/manageParkingPeriods",
+		input = "/exportParkingDB.do?method=prepareExportFile",
+		attribute = "parkingRenewalForm",
+		formBean = "parkingRenewalForm",
+		scope = "request",
+		parameter = "method")
 @Forwards(value = {
-	@Forward(name = "manageRequestsPeriods", path = "/parkingManager/manageRequestsPeriods.jsp", tileProperties = @Tile(title = "private.parking.managingdemandperiods")),
-	@Forward(name = "cardsRenewal", path = "/parkingManager/cardsRenewal.jsp"),
-	@Forward(name = "showParkingDetails", path = "/parkingManager/showParkingDetails.jsp"),
-	@Forward(name = "cardsSearch", path = "/parkingManager/cardsSearch.jsp", tileProperties = @Tile(title = "private.parking.parkingcards")) })
+		@Forward(name = "manageRequestsPeriods", path = "/parkingManager/manageRequestsPeriods.jsp", tileProperties = @Tile(
+				title = "private.parking.managingdemandperiods")),
+		@Forward(name = "cardsRenewal", path = "/parkingManager/cardsRenewal.jsp"),
+		@Forward(name = "showParkingDetails", path = "/parkingManager/showParkingDetails.jsp"),
+		@Forward(name = "cardsSearch", path = "/parkingManager/cardsSearch.jsp", tileProperties = @Tile(
+				title = "private.parking.parkingcards")) })
 public class ManageParkingPeriodsDA extends FenixDispatchAction {
 
-    public ActionForward prepareCardsSearch(ActionMapping mapping, ActionForm actionForm, HttpServletRequest request,
-	    HttpServletResponse response) throws Exception {
+	public ActionForward prepareCardsSearch(ActionMapping mapping, ActionForm actionForm, HttpServletRequest request,
+			HttpServletResponse response) throws Exception {
 
-	ParkingCardSearchBean parkingCardSearchBean = null;
-	if (getRenderedObject("parkingCardSearchBean") != null) {
-	    parkingCardSearchBean = getRenderedObject("parkingCardSearchBean");
-	} else {
-	    parkingCardSearchBean = new ParkingCardSearchBean();
+		ParkingCardSearchBean parkingCardSearchBean = null;
+		if (getRenderedObject("parkingCardSearchBean") != null) {
+			parkingCardSearchBean = getRenderedObject("parkingCardSearchBean");
+		} else {
+			parkingCardSearchBean = new ParkingCardSearchBean();
+		}
+		request.setAttribute("parkingCardSearchBean", parkingCardSearchBean);
+		return mapping.findForward("cardsSearch");
 	}
-	request.setAttribute("parkingCardSearchBean", parkingCardSearchBean);
-	return mapping.findForward("cardsSearch");
-    }
 
-    public ActionForward searchCards(ActionMapping mapping, ActionForm actionForm, HttpServletRequest request,
-	    HttpServletResponse response) throws Exception {
+	public ActionForward searchCards(ActionMapping mapping, ActionForm actionForm, HttpServletRequest request,
+			HttpServletResponse response) throws Exception {
 
-	if (request.getParameter("prepareRenewal") != null) {
-	    return prepareCardsRenewal(mapping, actionForm, request, response);
+		if (request.getParameter("prepareRenewal") != null) {
+			return prepareCardsRenewal(mapping, actionForm, request, response);
+		}
+		ParkingCardSearchBean parkingCardSearchBean = getRenderedObject("parkingCardSearchBean");
+		RenderUtils.invalidateViewState();
+		if (parkingCardSearchBean == null) {
+			parkingCardSearchBean = getSearchParameters(request);
+		}
+		parkingCardSearchBean.doSearch();
+		parkingCardSearchBean.orderSearchedParkingParties();
+		request.setAttribute("parkingCardSearchBean", parkingCardSearchBean);
+		return mapping.findForward("cardsSearch");
 	}
-	ParkingCardSearchBean parkingCardSearchBean = getRenderedObject("parkingCardSearchBean");
-	RenderUtils.invalidateViewState();
-	if (parkingCardSearchBean == null) {
-	    parkingCardSearchBean = getSearchParameters(request);
-	}
-	parkingCardSearchBean.doSearch();
-	parkingCardSearchBean.orderSearchedParkingParties();
-	request.setAttribute("parkingCardSearchBean", parkingCardSearchBean);
-	return mapping.findForward("cardsSearch");
-    }
 
-    private ParkingCardSearchBean getSearchParameters(HttpServletRequest request) {
-	ParkingCardSearchBean parkingCardSearchBean = new ParkingCardSearchBean();
-	String parkingCardUserState = request.getParameter("parkingCardUserState");
-	if (!StringUtils.isEmpty(parkingCardUserState)) {
-	    parkingCardSearchBean.setParkingCardUserState(ParkingCardUserState.valueOf(parkingCardUserState));
+	private ParkingCardSearchBean getSearchParameters(HttpServletRequest request) {
+		ParkingCardSearchBean parkingCardSearchBean = new ParkingCardSearchBean();
+		String parkingCardUserState = request.getParameter("parkingCardUserState");
+		if (!StringUtils.isEmpty(parkingCardUserState)) {
+			parkingCardSearchBean.setParkingCardUserState(ParkingCardUserState.valueOf(parkingCardUserState));
+		}
+		String parkingGroupID = request.getParameter("parkingGroupID");
+		if (!StringUtils.isEmpty(parkingGroupID)) {
+			parkingCardSearchBean.setParkingGroup(rootDomainObject.readParkingGroupByOID(Integer.valueOf(parkingGroupID)));
+		}
+		String actualEndDate = request.getParameter("actualEndDate");
+		if (!StringUtils.isEmpty(actualEndDate)) {
+			DateTimeFormatter dtf = DateTimeFormat.forPattern("yyyy-MM-dd");
+			parkingCardSearchBean.setActualEndDate(dtf.parseDateTime(actualEndDate).toYearMonthDay());
+		}
+		String parkingCardSearchPeriod = request.getParameter("parkingCardSearchPeriod");
+		if (!StringUtils.isEmpty(parkingCardSearchPeriod)) {
+			parkingCardSearchBean.setParkingCardSearchPeriod(ParkingCardSearchPeriod.valueOf(parkingCardSearchPeriod));
+		}
+		return parkingCardSearchBean;
 	}
-	String parkingGroupID = request.getParameter("parkingGroupID");
-	if (!StringUtils.isEmpty(parkingGroupID)) {
-	    parkingCardSearchBean.setParkingGroup(rootDomainObject.readParkingGroupByOID(Integer.valueOf(parkingGroupID)));
-	}
-	String actualEndDate = request.getParameter("actualEndDate");
-	if (!StringUtils.isEmpty(actualEndDate)) {
-	    DateTimeFormatter dtf = DateTimeFormat.forPattern("yyyy-MM-dd");
-	    parkingCardSearchBean.setActualEndDate(dtf.parseDateTime(actualEndDate).toYearMonthDay());
-	}
-	String parkingCardSearchPeriod = request.getParameter("parkingCardSearchPeriod");
-	if (!StringUtils.isEmpty(parkingCardSearchPeriod)) {
-	    parkingCardSearchBean.setParkingCardSearchPeriod(ParkingCardSearchPeriod.valueOf(parkingCardSearchPeriod));
-	}
-	return parkingCardSearchBean;
-    }
 
-    public ActionForward prepareCardsRenewal(ActionMapping mapping, ActionForm actionForm, HttpServletRequest request,
-	    HttpServletResponse response) throws Exception {
-	String[] selectedParkingCards = ((DynaActionForm) actionForm).getStrings("selectedParkingCards");
-	ParkingCardSearchBean parkingCardSearchBean = getRenderedObject("parkingCardSearchBean");
-	RenderUtils.invalidateViewState();
-	parkingCardSearchBean.getSelectedParkingParties().clear();
-	for (int iter = 0; iter < selectedParkingCards.length; iter++) {
-	    parkingCardSearchBean.getSelectedParkingParties().add(
-		    rootDomainObject.readParkingPartyByOID(Integer.valueOf(selectedParkingCards[iter])));
+	public ActionForward prepareCardsRenewal(ActionMapping mapping, ActionForm actionForm, HttpServletRequest request,
+			HttpServletResponse response) throws Exception {
+		String[] selectedParkingCards = ((DynaActionForm) actionForm).getStrings("selectedParkingCards");
+		ParkingCardSearchBean parkingCardSearchBean = getRenderedObject("parkingCardSearchBean");
+		RenderUtils.invalidateViewState();
+		parkingCardSearchBean.getSelectedParkingParties().clear();
+		for (String selectedParkingCard : selectedParkingCards) {
+			parkingCardSearchBean.getSelectedParkingParties().add(
+					rootDomainObject.readParkingPartyByOID(Integer.valueOf(selectedParkingCard)));
+		}
+		if (parkingCardSearchBean.getSelectedParkingParties().isEmpty()) {
+			setMessage(request, "message.noParkingPartiesSelected");
+			request.setAttribute("parkingCardSearchBean", parkingCardSearchBean);
+			return mapping.findForward("cardsSearch");
+		}
+		parkingCardSearchBean.orderSelectedParkingParties();
+		request.setAttribute("parkingCardSearchBean", parkingCardSearchBean);
+		return mapping.findForward("cardsRenewal");
 	}
-	if (parkingCardSearchBean.getSelectedParkingParties().isEmpty()) {
-	    setMessage(request, "message.noParkingPartiesSelected");
-	    request.setAttribute("parkingCardSearchBean", parkingCardSearchBean);
-	    return mapping.findForward("cardsSearch");
+
+	public ActionForward renewParkingCards(ActionMapping mapping, ActionForm actionForm, HttpServletRequest request,
+			HttpServletResponse response) throws Exception {
+		ParkingCardSearchBean parkingCardSearchBean = getRenderedObject("parkingCardSearchBean");
+		if (request.getParameter("cancel") != null) {
+			return searchCards(mapping, actionForm, request, response);
+		}
+		if (request.getParameter("remove") != null) {
+			String[] parkingCardsToRemove = ((DynaActionForm) actionForm).getStrings("parkingCardsToRemove");
+			for (String element : parkingCardsToRemove) {
+				parkingCardSearchBean.removeSelectedParkingParty(Integer.valueOf(element));
+			}
+			request.setAttribute("parkingCardSearchBean", parkingCardSearchBean);
+			return mapping.findForward("cardsRenewal");
+		}
+		RenewParkingCards.run(parkingCardSearchBean.getSelectedParkingParties(), parkingCardSearchBean.getRenewalEndDate(),
+				parkingCardSearchBean.getNewParkingGroup(), parkingCardSearchBean.getEmailText());
+		parkingCardSearchBean.getSelectedParkingParties().clear();
+		parkingCardSearchBean.setRenewalEndDate(null);
+		parkingCardSearchBean.setNewParkingGroup(null);
+		request.setAttribute("parkingCardSearchBean", parkingCardSearchBean);
+		return searchCards(mapping, actionForm, request, response);
 	}
-	parkingCardSearchBean.orderSelectedParkingParties();
-	request.setAttribute("parkingCardSearchBean", parkingCardSearchBean);
-	return mapping.findForward("cardsRenewal");
-    }
 
-    public ActionForward renewParkingCards(ActionMapping mapping, ActionForm actionForm, HttpServletRequest request,
-	    HttpServletResponse response) throws Exception {
-	ParkingCardSearchBean parkingCardSearchBean = getRenderedObject("parkingCardSearchBean");
-	if (request.getParameter("cancel") != null) {
-	    return searchCards(mapping, actionForm, request, response);
+	public ActionForward showParkingDetails(ActionMapping mapping, ActionForm actionForm, HttpServletRequest request,
+			HttpServletResponse response) {
+		ParkingCardSearchBean parkingCardSearchBean = getSearchParameters(request);
+		Integer parkingPartyID = Integer.valueOf(request.getParameter("parkingPartyID"));
+		request.setAttribute("parkingParty", rootDomainObject.readParkingPartyByOID(parkingPartyID));
+		request.setAttribute("parkingCardSearchBean", parkingCardSearchBean);
+		return mapping.findForward("showParkingDetails");
 	}
-	if (request.getParameter("remove") != null) {
-	    String[] parkingCardsToRemove = ((DynaActionForm) actionForm).getStrings("parkingCardsToRemove");
-	    for (int iter = 0; iter < parkingCardsToRemove.length; iter++) {
-		parkingCardSearchBean.removeSelectedParkingParty(Integer.valueOf(parkingCardsToRemove[iter]));
-	    }
-	    request.setAttribute("parkingCardSearchBean", parkingCardSearchBean);
-	    return mapping.findForward("cardsRenewal");
+
+	public ActionForward prepareManageRequestsPeriods(ActionMapping mapping, ActionForm actionForm, HttpServletRequest request,
+			HttpServletResponse response) throws Exception {
+		List<ParkingRequestPeriod> parkingRequestPeriods =
+				new ArrayList<ParkingRequestPeriod>(rootDomainObject.getParkingRequestPeriods());
+		Collections.sort(parkingRequestPeriods, new BeanComparator("beginDate"));
+		request.setAttribute("parkingRequestPeriods", parkingRequestPeriods);
+		return mapping.findForward("manageRequestsPeriods");
 	}
-	RenewParkingCards.run(parkingCardSearchBean.getSelectedParkingParties(), parkingCardSearchBean.getRenewalEndDate(),
-		parkingCardSearchBean.getNewParkingGroup(), parkingCardSearchBean.getEmailText());
-	parkingCardSearchBean.getSelectedParkingParties().clear();
-	parkingCardSearchBean.setRenewalEndDate(null);
-	parkingCardSearchBean.setNewParkingGroup(null);
-	request.setAttribute("parkingCardSearchBean", parkingCardSearchBean);
-	return searchCards(mapping, actionForm, request, response);
-    }
 
-    public ActionForward showParkingDetails(ActionMapping mapping, ActionForm actionForm, HttpServletRequest request,
-	    HttpServletResponse response) {
-	ParkingCardSearchBean parkingCardSearchBean = getSearchParameters(request);
-	Integer parkingPartyID = Integer.valueOf(request.getParameter("parkingPartyID"));
-	request.setAttribute("parkingParty", rootDomainObject.readParkingPartyByOID(parkingPartyID));
-	request.setAttribute("parkingCardSearchBean", parkingCardSearchBean);
-	return mapping.findForward("showParkingDetails");
-    }
+	public ActionForward editRequestPeriod(ActionMapping mapping, ActionForm actionForm, HttpServletRequest request,
+			HttpServletResponse response) throws Exception {
+		Integer parkingRequestPeriodToEditCode = new Integer(request.getParameter("idInternal"));
+		request.setAttribute("parkingRequestPeriodToEdit",
+				rootDomainObject.readParkingRequestPeriodByOID(parkingRequestPeriodToEditCode));
+		return prepareManageRequestsPeriods(mapping, actionForm, request, response);
+	}
 
-    public ActionForward prepareManageRequestsPeriods(ActionMapping mapping, ActionForm actionForm, HttpServletRequest request,
-	    HttpServletResponse response) throws Exception {
-	List<ParkingRequestPeriod> parkingRequestPeriods = new ArrayList<ParkingRequestPeriod>(
-		rootDomainObject.getParkingRequestPeriods());
-	Collections.sort(parkingRequestPeriods, new BeanComparator("beginDate"));
-	request.setAttribute("parkingRequestPeriods", parkingRequestPeriods);
-	return mapping.findForward("manageRequestsPeriods");
-    }
+	public ActionForward deleteRequestPeriod(ActionMapping mapping, ActionForm actionForm, HttpServletRequest request,
+			HttpServletResponse response) throws Exception {
+		Integer parkingRequestPeriodToDeleteCode = new Integer(request.getParameter("idInternal"));
+		DeleteParkingRequestPeriod.run(parkingRequestPeriodToDeleteCode);
+		return prepareManageRequestsPeriods(mapping, actionForm, request, response);
+	}
 
-    public ActionForward editRequestPeriod(ActionMapping mapping, ActionForm actionForm, HttpServletRequest request,
-	    HttpServletResponse response) throws Exception {
-	Integer parkingRequestPeriodToEditCode = new Integer(request.getParameter("idInternal"));
-	request.setAttribute("parkingRequestPeriodToEdit",
-		rootDomainObject.readParkingRequestPeriodByOID(parkingRequestPeriodToEditCode));
-	return prepareManageRequestsPeriods(mapping, actionForm, request, response);
-    }
-
-    public ActionForward deleteRequestPeriod(ActionMapping mapping, ActionForm actionForm, HttpServletRequest request,
-	    HttpServletResponse response) throws Exception {
-	Integer parkingRequestPeriodToDeleteCode = new Integer(request.getParameter("idInternal"));
-	DeleteParkingRequestPeriod.run(parkingRequestPeriodToDeleteCode);
-	return prepareManageRequestsPeriods(mapping, actionForm, request, response);
-    }
-
-    private void setMessage(HttpServletRequest request, String msg) {
-	ActionMessages actionMessages = getMessages(request);
-	actionMessages.add("message", new ActionMessage(msg));
-	saveMessages(request, actionMessages);
-    }
+	private void setMessage(HttpServletRequest request, String msg) {
+		ActionMessages actionMessages = getMessages(request);
+		actionMessages.add("message", new ActionMessage(msg));
+		saveMessages(request, actionMessages);
+	}
 }
